# simple-microservice-rag

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  readme.md
embedder/: Dockerfile  main.py  model.py  pyproject.toml  schemas.py  service.py  settings.toml
orchestrator/: pyproject.toml  schemas.py
orchestrator/database_conectors/: base.py  chromadb.py
orchestrator/dtos/: embedding_dto.py  rerank_dto.py
orchestrator/pipelines/: base.py
orchestrator/tasks/: base.py  retrieval_task.py  schemas.py
reranker/: main.py  pyproject.toml  schemas.py  service.py  settings.toml
reranker/models/: factory.py  model.py  schemas.py
