[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = ""
authors = ["Christopher Keibel <christopher.keibel.90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
pydantic = "^2.9.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
