[tool.poetry]
name = "reranker"
version = "0.1.0"
description = ""
authors = ["Christopher Keibel <christopher.keibel.90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
torch = "2.0.0"
sentence-transformers = "^3.2.1"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
dynaconf = "^3.2.6"
numpy = "^1"
einops = "^0.8.0"
uvicorn = "^0.32.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
